// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expenses 1`] = `
<div>
  <h>
    Viewing 
    23
     
    expenses
     totalling 
    $23,598,765.43
  </h>
</div>
`;
